--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="button_next">Next</string>
     <string name="user_password">Enter password</string>
     <string name="required">Required</string>
+    <string name="missingdetails">Missing Details</string>
+    <string name="missingdetails">Missing Details</string>
+    <string name="country">country</string>
+    <string name="city">city</string>
+    <string name="address">address</string>
+    <string name="address">address</string>
+    <string name="floor">floor</string>
+    <string name="area">area</string>
 </resources>
