--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,6 @@
     <string name="enter_currentCity">In what city do you live?</string>
     <string name="enter_currentStreet">In which street do you live?</string>
     <string name="enter_currentFloor">On what floor do you live?</string>
-    <string name="enter_currentArea">In what area do you live?</string>/>
+    <string name="enter_currentArea">In what area do you live?</string>
+    <string name="login">LOGIN</string>/>
 </resources>
