--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -14,4 +14,40 @@
     <string name="area">אזור</string>
     <string name="title_question_title_name">זיכרון לטווח קצר</string>
     <string name="second_question_textview_name">לחץ על הכפתור כאשר אתה מוכן</string>
+    <string name="login">התחבר</string>
+    <string name="enter_currentArea">באיזה אזור אתה גר?</string>
+    <string name="enter_currentFloor">באיזו קומה אתה גר?</string>
+    <string name="enter_currentStreet">באיזה רחוב אתה גר?</string>
+    <string name="enter_currentCity">באיזו עיר אתה גר?</string>
+    <string name="enter_currentSeason">באיזו עונה אנחנו נמצאים?</string>
+    <string name="enter_currentCountry">באיזו מדינה אתה גר?</string>
+    <string name="enter_currentYear">באיזו שנה אנחנו נמצאים?</string>
+    <string name="enter_currentDate">מה התאריך היום?</string>
+    <string name="enter_currentMonth">באיזה חודש אנחנו נמצאים?</string>
+    <string name="enter_answer">הכנס תשובה</string>
+    <string name="enter_currentDay">איזה יום היום?</string>
+    <string name="choose_first_question_title">זמן ומקום</string>
+    <string name="choose_information_question_title">מידע של המשתמש</string>
+    <string name="seventh_question_title_string">שאלה שביעית</string>
+    <string name="eighth_question_instructions">שים את העיגול השחור בתוך הריבוע האדום</string>
+    <string name="eighth_question_title">גרור ושחרר</string>
+    <string name="six_question_textview2_name">חזור על המשפט</string>
+    <string name="sixth_question_textview_name">דוגמא לשמפט שצריך להופיע כאן</string>
+    <string name="title_question_title_name6">שאלה שישית</string>
+    <string name="textView_fifth_question">בבקשה תרשום את מה שאתה רואה בתמונה</string>
+    <string name="fifth_question_name">שאלה חמישית</string>
+    <string name="fourth_question_textview_name">בבקשה חזור על שלושה אובייקטים מהשאלה הקודמת</string>
+    <string name="title_question_title_name4">שאלה רביעית</string>
+    <string name="textView2_repeat_sentence_string">לחץ על המיקרופון כדי לחזור על המשפט</string>
+    <string name="textView_repeat_sentence_string">משפט רנדומלי שצריך לחזור עליו</string>
+    <string name="repeat_sentence_string_title">חזרה על משפט</string>
+    <string name="spelling_version_name">איות</string>
+    <string name="textView_spellig_version_textView2">לחץ על המיקרופון כדי להתחיל לאיית</string>
+    <string name="textView_spellig_version_word">שולחן</string>
+    <string name="Button_finish_answer_text">לחץ כאן כאשר אתה מסיים לענות</string>
+    <string name="answer_math_voice">לחץ כאן כדי לענות</string>
+    <string name="math_version_name">מתמטיקה</string>
+    <string name="choose_third_question_textview_name">כעת נעשה תרגיל חשיבה פשוט ומלא ותוכלו לעשות חשבון ניתן גם לעשות תרגיל איות, אנא הקליקו על בחירתכם</string>
+    <string name="choose_third_question_title">שאלה שלישית - בחירה</string>
+    <string name="second_question_textview2_name">בבקשה תקרא בקול את שלושת האובייקטים ביחד</string>
 </resources>
