--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="textView_repeat_sentence_string">A random sentence need to repeat</string>
     <string name="textView2_repeat_sentence_string">Click on the microphone to repeat the sentence</string>
     <string name="title_question_title_name4">Fourth Question</string>
-    <string name="fourth_question_textview_name">please repeat the 3 object from seacund question</string>
+    <string name="fourth_question_textview_name">please repeat the 3 object from second question</string>
     <string name="fifth_question_name">Fifth Question</string>
     <string name="textView_fifth_question">please write what you see in the picture</string>
     <string name="title_question_title_name6">Sixth question</string >
