--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -59,4 +59,5 @@
     <string name="speak">דבר</string>
     <string name="enter_a_sentence">כתוב משפט בן שלוש מילים לפחות</string>
     <string name="write_the_sentence_here">כתוב את המשפט כאן</string>
+    <string name="explain_math_text_view">בצע חיסור ב-7 בכל פעם</string>
 </resources>
