--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,7 @@
     <string name="speak">SPEAK</string>
     <string name="enter_a_sentence">Write a sentence of at least three words</string>
     <string name="write_the_sentence_here">Write the sentence here</string>
-    <string name="explain_math_text_view">Make a subtraction of 7 at a time</string>/>
+    <string name="explain_math_text_view">Make a subtraction of 7 at a time</string>
+    <string name="file_textview_name">Click on the pluse button for add picture</string>
+    <string name="title_question_fileFragment_textView">Add Pictures</string>/>
 </resources>
