--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -63,4 +63,5 @@
     <string name="file_textview_name">"לחץ על לחצן הפלוס כדי להוסיף תמונה "</string>
     <string name="title_question_fileFragment_textView">הוסף תמונות</string>
     <string name="take_photo">צלם תמונה</string>
+    <string name="name_picture">תמונה</string>
 </resources>
