--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="file_textview_name">Click on the pluse button for add picture</string>
     <string name="title_question_fileFragment_textView">Add Pictures</string>
     <string name="take_photo">Take photo</string>/>
+    <string name="name_picture">Picture</string>/>
 </resources>
