--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -67,4 +67,5 @@
     <string name="eighth_question_instructions2">גרור את העיגול צהוב לתוך הריבוע</string>
     <string name="eighth_question_instructions3">גרור את העיגול כחול לתוך הריבוע</string>
     <string name="eighth_question_instructions4">גרור את העיגול ירוק לתוך הריבוע</string>
+    <string name="textView_tenth">בבקשה העתק את הצורה</string>
 </resources>
