--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,5 +65,6 @@
     <string name="name_picture">Picture</string>
     <string name="eighth_question_instructions2">Put the yellow circle in the red square</string>
     <string name="eighth_question_instructions3">put the blue circle in the red square</string>
-    <string name="eighth_question_instructions4">put the green circle in the red square</string>/>
+    <string name="eighth_question_instructions4">put the green circle in the red square</string>
+    <string name="textView_tenth">please copy the picture</string>/>
 </resources>
