--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -72,4 +72,5 @@
     <string name="mic_button_title">כפתור דיבור</string>
     <string name="speaker_button_desc">לחץ כאן כדי לשמוע</string>
     <string name="mic_button_desc">לחץ כאן כדי לדבר</string>
+    <string name="tenth_question">צייר צורה</string>
 </resources>
