--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="speaker_button_title">Speaker Button</string>/>
     <string name="mic_button_title">Microphone Button</string>/>
     <string name="speaker_button_desc">Click here for listen</string>/>
-    <string name="mic_button_desc">Click here for speak</string>/>
+    <string name="mic_button_desc">Click here for speak</string>
+    <string name="tenth_question">tenth question</string>/>
 
 </resources>
