--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -75,4 +75,5 @@
     <string name="tenth_question">צייר צורה</string>
     <string name="hospital_address">איך קוראים למקום שאתה נמצא?</string>
     <string name="hospital_floor">באיזה קומה נמצע החדר שלך?</string>
+    <string name="ninth_question">שאלה תשיעית</string>
 </resources>
