--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -76,4 +76,5 @@
     <string name="hospital_address">איך קוראים למקום שאתה נמצא?</string>
     <string name="hospital_floor">באיזה קומה נמצע החדר שלך?</string>
     <string name="ninth_question">שאלה תשיעית</string>
+    <string name="confirm_word">בדוק מילה</string>
 </resources>
