--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="tenth_question">tenth question</string>
     <string name="hospital_address">What is the name for your current place</string>
     <string name="hospital_floor">in what floor your room is?</string>
-    <string name="ninth_question">Ninth Question</string>/>
+    <string name="ninth_question">Ninth Question</string>
+    <string name="confirm_word">Confirm Word</string>/>
 
 </resources>
