--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -79,4 +79,8 @@
     <string name="confirm_word">בדוק מילה</string>
     <string name="feedback_here">משוב</string>
     <string name="click_on_the_microphone_for_answer">לחץ על המיקרופון בשביל לענות</string>
+    <string name="Correct_fourthQuestion">נכון</string>
+    <string name="VeryClose_fourthQuestion">"קרוב מאוד "</string>
+    <string name="Close_fourthQuestion">קרוב</string>
+    <string name="InCorrect_fourthQuestion">תנסה שוב</string>
 </resources>
