Added a fragment that tell the user before he start the test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,7 @@
     <string name="no_permission">Doesn\'t have permission please talk to your doctor to start a test</string>
     <string name="Wrong_username">Wrong username or password try again</string>
     <string name="Enter_email">Email Address and Password Must Be Entered</string>
+    <string name="start_test_string">Start The Test</string>
     />
 
 </resources>
