--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -88,4 +88,5 @@
     <string name="no_permission">אין לך הרשאה בבקשה תדברם עם הרופא שלך</string>
     <string name="Wrong_username">טעות בשם משתמש או סיסמא תנסה שוב</string>
     <string name="Enter_email">בבקשה תכניס אמייל וסיסמא</string>
+    <string name="start_test_string">לתחילת המבחן לחץ כאן</string>
 </resources>
