--- a/app/src/main/res/values-iw-rIL/strings.xml
+++ b/app/src/main/res/values-iw-rIL/strings.xml
@@ -90,4 +90,6 @@
     <string name="Enter_email">בבקשה תכניס אמייל וסיסמא</string>
     <string name="missing_details_textView2">דף זה ימולא על ידי מלווה</string>
     <string name="start_test_string">לתחילת המבחן לחץ כאן</string>
+    <string name="you_can_added_picture_of_draft_pages_the_end_of_the_test">ישנה אפשרות להשתמש בדפי טיוטה ולהוסיף אותם כתמונות בסוף המבחן</string>
+    <string name="notice">הערה:</string>
 </resources>
