--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,8 +87,10 @@
     <string name="no_permission">Doesn\'t have permission please talk to your doctor to start a test</string>
     <string name="Wrong_username">Wrong username or password try again</string>
     <string name="Enter_email">Email Address and Password Must Be Entered</string>
-    <string name="missing_details_textView2">This page will be filled by a lender</string>
+    <string name="missing_details_textView2">This page will be filled by a helper</string>
     <string name="start_test_string">To start the test click here</string>
+    <string name="you_can_added_picture_of_draft_pages_the_end_of_the_test">It is possible to use draft pages and add them as pictures at the end of the test</string>
+    <string name="notice">notice:</string>
     />
 
 </resources>
